Fixing tweets width on mobile

--- a/view/styles/popup.less
+++ b/view/styles/popup.less
@@ -87,7 +87,8 @@
 					.twitter-tweet-rendered {
 						clear: none !important;
 						margin: 7px auto !important;
-						width: 400px;
+						width: 100%;
+						max-width: 400px;
 						
 						.twt-tweet .twt-media {
 							display: none !important;
